<resources>
    <string name="app_name">Школа №6</string>
    <string name="main">Главная</string>
    <string name="close">close</string>
    <string name="textaboutschool" formatted="false">
        "Муниципальное бюджетное общеобразовательное учреждение «Средняя общеобразовательная школа № 6» начала свою работу 1 сентября 2004 года."
        "Учредителем школы является Администрация города Югорска ХМАО-Югры Тюменской области.\n\n"
        "Вот уже много лет МБОУ «Средняя общеобразовательная школа № 6» и Управление связи ООО «Газпром трансгаз Югорск» связывают взаимовыгодные партнерские взаимоотношения. "
        "Сотрудничество с предприятием является важным фактором, определяющим стабильное развитие школы. Благодаря совместным усилиям реализуются новые проекты и планы на высоком, качественном уровне.\n\n"
        "Надежными помощниками и активными участниками образовательного процесса являются родители (законные представители), которые как никто заинтересованы в конечном результате. "
        "Без их помощи и поддержки школе невозможно достичь намеченных высот.\n\n"
        "И именно отлаженное взаимодействие этих составляющих – учителей, родителей, детей, социальных партнеров – создает то, что называют духом школы, ее особую атмосферу. "
        "Несмотря на ежедневные проблемы и заботы, в школе царит атмосфера творчества, поиска и взаимопонимания."
    </string>
    <string name="textaboutschool2" formatted="false">
        "Школьное здание имеет оригинальный проект: классы шестиугольной формы. Учебные кабинеты, спортивные сооружения школы оснащены необходимым оборудованием и инвентарем в соответствии с требованиями санитарных правил для освоения основных и дополнительных образовательных программ. "
        "Функции по охране здоровья возложены на медицинский блок.\n\n"
        "Имеется спортзал с площадью 373,4 кв. м, лыжная база – 178,2 кв. м, стадион – 2368 кв. м, бассейн – 14296,8 м2 (малая ванна - 123,1 кв.м, большая ванна – 450,2 кв.м.). "
        "На базе школы работают спортивные секции. Актовый зал на 200 мест оснащён современным оборудованием."
    </string>
    <string name="textaboutschool3" formatted="false">
        "Помещение для организации питания обучающихся – столовая школы, включающая в себя обеденный зал на 260 посадочных мест с общей площадью 254,6 кв. м., а также кухня, мойки, мясорыбный цех, мучной цех, овощной цех, склады. "
        "Пищеблок оснащен всем необходимым оборудованием.\n\n"
        "Выдача готовой пищи разрешается только после снятия пробы бракеражной комиссией с обязательной отметкой вкусовых качеств, готовности блюд и соответствующей записи в бракеражном журнале готовых блюд. "
        "В течение учебного года школой проводилось анкетирование родителей и учащихся с целью изучения мнения о качестве питания в школьной столовой."
    </string>
    <string name="textaboutschool4" formatted="false">
        "Лицензия на право осуществления образовательной деятельности получена: 07.09.2015 года (регистрационный № 2266, серия 86ЛО1 №0001491).\n\n"
        "В 2013 году школа прошла государственную аккредитацию (регистрационный № 815, серия 86А01 №0000063). Срок действия государственной аккредитации по 16 декабря 2025 г."
    </string>
    <string name="textaboutschool5" formatted="false">
        "В 2004 году директором был назначен Климин Вячеслав Анатольевич, Почетный работник общего образования Российской Федерации.\n\n"
        "В 2013 году директором была назначена Комисаренко Евгения Борисовна, награжденная Почетной грамотой Департамента образования и науки Ханты-Мансийского автономного округа (2010 г.)."
    </string>
    <string name="textaboutschool6" formatted="false">
        "В соответствии с распоряжением Главы г. Югорска Ханты-Мансийского автономного округа-Югры № 1466 от 30 октября 2009 г. "
        "была осуществлена реорганизация муниципального бюджетного общеобразовательного учреждения «Средняя общеобразовательная школа № 6» в форме присоединения муниципального бюджетного дошкольного "
        "образовательного учреждения «Детский сад общеразвивающего вида с приоритетным осуществлением деятельности по художественно-эстетическому и познавательно речевому развитию детей «Светлячок».\n\n"
        "В дошкольных группах МБОУ «СОШ №6» созданы необходимые условия для пребывания и развития воспитанников, которые обеспечивают развитие физической активности, формирования художественно-эстетического развития и развития гражданской позиции дошкольников"
    </string>
    <string name="textaboutschool7" formatted="false">
        "С 2006 по 2012 год педагогический коллектив школы реализовывал программу развития «Школа ХХI века». В 2012 году школой была разработана и принята к реализации новая программа развития «Эффективная школа».\n\n"
        "02.02.2018 Начальником Управления образования администрации города Югорска утверждена Программа развития на 2018-2022 годы «Открытая школа». "
        "Цель Программы: обеспечение доступности качественного образования, соответствующего современным потребностям общества, путем реализации комплекса инновационных мер, "
        "направленных на создание открытой (установление партнерских отношений), активной (выполнение социокультурной функции в городе), карьерного типа (развитие учащихся в самостоятельной учебной, управленческой и социальной деятельности), здоровьесберегающей образовательной среды в условиях реализации федерального государственного образовательного стандарта.\n\n"
        "В 2017 году Программа развития на 2018 – 2022 годы «Открытая школа» отмечена золотой медалью Национальной премии в области образования «Элита Российского образования», авторский коллектив награжден Дипломом победителя в номинации «За успехи внедрения инноваций в области образования – 2017».\n\n"
        "Основными направлениями деятельности коллектива на ближайшие годы становится переход на Федеральный государственным образовательный стандарт среднего общего образования (2020–2021 учебный год); развитие системы поддержки одаренных детей; повышение уровня профессиональной компетентности педагогов."
    </string>
    <string name="textaboutschool8" formatted="false">
        "За годы работы в учреждении сформировался слаженный педагогический коллектив. Учителя имеют необходимую квалификацию и достаточный творческий потенциал. "
        "Гордость школы – учителя, отмеченные наградами окружного и российского значения: «Почетный работник общего образования» – Колосова Светлана Юрьевна, Буркова Екатерина Николаевна, "
        "Галимова Наиля Муслимовна. Два педагога являются обладателями гранта Президента РФ – Буркова Екатерина Николаевна, Гараева Зоя Владимировна. "
        "6 педагогических работников награждены Почетными Грамотами Министерства образования и науки РФ: Бобрецова Надежда Алексеевна, Буркова Екатерина Николаевна, Галимова Наиля Муслимовна, "
        "Гараева Зоя Владимировна, Колосова Светлана Юрьевна, Рыбакова Елена Николаевна.\n\n"
        "Педагогический коллектив имеет необходимую квалификацию и достаточный творческий потенциал. Высшее образование имеют 95%, среднее специальное – 5%. "
        "Возрастной ценз составил до 30 лет – 6%, от 55 лет – 13%. 67% педагогов имеют высшую и первую квалификационные категории.\n\n"
        "В 2006 году лауреатом муниципального конкурса «Педагог года» стала Елена Николаевна Рыбакова, учитель химии, в 2015 году победителем – Налапкина Наталия Викторовна, учитель начальных классов, в 2017 лауреатом конкурса – Пролеева Галина Ивановна, учитель географии."
    </string>
    <string name="textaboutschool9" formatted="false">
        "Ученики шестой школы – это интеллектуальный, творческий потенциал, ее будущее. И нам есть чем гордиться. В 2004 году в школе было 17 отличников. "
        "С каждым годом их количество растет. Сегодня их – 66 (2018 г.). За 15 лет работы школы аттестаты особого образца получили 23 выпускника 9 и 11 классов. "
        "Школа подготовила победителей и призеров Международной олимпиады по основам наук, Регионального этапа Всероссийской предметной олимпиады по математике, биологии и физической культуре, "
        "призеров Всероссийского конкурса «Познание и творчество», победителей и призеров Всероссийского «Молодежного предметного чемпионата» по математике, биологии, русскому языку, победителей "
        "Окружного физико-математического турнира, Олимпиады по основам наук Уральского Федерального округа.\n\n"
        "Стабильным остается процент учащихся, которые учатся на «4» и «5» - 46 %. Ежегодно 100% выпускников подтверждают годовые отметки, проходя государственную аттестацию."
    </string>
    <string name="address2"><b>Адрес</b> 628260, ХМАО-Югра, \nг.Югорск, ул. Ермака, 7</string>
    <string name="e_mail2"><b>E-mail</b> school-62007@yandex.ru</string>
    <string name="url"><b>Адрес сайта</b> http://школа6югорск.рф</string>
    <string name="vk"><b>Группа ВКонтакте</b> https://vk.com/club2040244</string>
    <string name="Komisarenko">Директор школы\n<b>Комисаренко Евгения Борисовна</b></string>
    <string name="Rybakova">Заместитель директора по УВР\n<b>Рыбакова Елена Николаевна</b></string>
    <string name="Votinceva">Приёмная\nСпециалист по кадрам \n<b>Вотинцева Елена Георгиевна</b>\nСекретарь\n<b>Харизова Мария Сергеевна</b>\n<b>Шмитд Ирина Юрьевна</b></string>
    <string name="Bogomolova">Бухгалтерия\n<b>Богомолова Елена Николаевна</b></string>
    <string name="Filonova">Заместитель директора по \nхозяйственной работе  \n<b>Филонова Татьяна Михайловна</b></string>
    <string name="Danilova">Заместитель директора по УВР\n<b>Данилова Татьяна Вениаминовна</b>\n<b>Пролеев Алексей Анатольевич</b></string>
    <string name="Hairulina">Заместитель директора по УВР\n<b>Василенко\nАлександра Александровна</b>\nПедагог-организатор\n<b>Путилина Ольга Петровна</b></string>
    <string name="Zaiceva">Столовая\n<b>Зайцева Лилия Васильевна</b></string>
    <string name="Grehova">Вахта\n<b>Грехов Андрей Анатольевич</b></string>
    <string name="Deshevyh">Социальный педагог\n<b>Дешевых Лариса Андреевна</b></string>
    <string name="Tadyko">Бассейн Заведующий\n<b>Тадыко Сергей Валентинович</b></string>
    <string name="Lyashok">Библиотека Заведующая\n<b>Ляшок Светлана Васильевна</b></string>
</resources>